# mpi_assignment_1

./: CMakeLists.txt  Makefile
include/: input_sanitizer.h  menu.h  read_int.h
src/: input_sanitizer.c  main.c  menu.c  read_int.c
